# labflow

./: .env.example  .gitignore  AGENTS.md  DECISIONS_LOCKED.md  DOCTRINE.md  ENGINEERING.md  Makefile  PLANS.md  PRODUCT_REQUIREMENTS.md  PROJECT_PLAN.md  README.md
apps/api/: pyproject.toml
apps/api/src/labflow_api/: __init__.py  main.py  settings.py
apps/api/src/labflow_api/routes/: __init__.py  _shared.py  agent.py  artifacts.py  audit.py  evals.py  health.py  rag.py  tools.py  workflows.py
apps/api/tests/: test_fastapi_api.py  test_import_labflow_api.py
docs/: agent_failure_taxonomy.md  api_contract.md  architecture.md  aws_architecture_decisions.md  baseline_rotation.md  case_study.md  corpus_lifecycle_reliability.md  demo_recording_checklist.md  demo_script_starlims_role.md  demo_walkthrough.md  eval_audit_stage18_6.md  eval_summary.md  final_hardening_report.md  inference_adapter.md  inference_answer_composer.md  inference_eval_ladders.md  interview_review_quiz.md  limitations_and_disclosure.md  migration_inspection.md  pinecone_vector_backend.md  portfolio_artifact_manifest.json  portfolio_brief.md  pre_stage9_cleanup_assembly_review.md  production_gap_analysis.md  resume_bullets.md  retrieval_backend_comparison.md  role_alignment_starlims.md  share_readiness_checklist.md  sop_alignment_strategy.md  stage0_assembly_review.md  stage10_assembly_review.md  stage11_assembly_review.md  stage12_assembly_review.md  stage13_assembly_review.md  stage14_assembly_review.md  stage15_assembly_review.md  stage16_assembly_review.md  stage17_assembly_review.md  (+35 more)
(+121 files in other folders)
